k8s/apps/petfoodfinder/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petfoodfinder
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petfoodfinder
  template:
    metadata:
      labels:
        app: petfoodfinder
    spec:
      containers:
        - name: web
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello from petfoodfinder.app"
          ports:
            - containerPort: 5678
