k8s/apps/petfoodfinder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petfoodfinder
  namespace: web
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - petfoodfinder.app
      secretName: petfoodfinder-app-tls
  rules:
    - host: petfoodfinder.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petfoodfinder
                port:
                  number: 80
